# mngsend

./: README.md  pyproject.toml
mngsend/: __main__.py  mycreds.py
